# nova-cpp

./: .baldr-clang.yaml  .baldr.yaml  .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conan_provider.cmake  conandata.yml  conanfile.py  config-package-suse.cmake  nova.hh.in  run
.github/workflows/: build.yml  cross-platform.yml  main.yml
bench/: CMakeLists.txt  serializer.cc
cmake/: buildinfo.cmake  compiler-warnings.cmake  compilerWarnings.cmake  dependencies.cmake  githash.cmake  nova.hh.in  settings.cmake  targets.cmake  version.cmake
env/: suse.Dockerfile
examples/: CMakeLists.txt  conanfile.txt  nova-version.cc  sandbox.cpp  shielded.cc  threading.cc
functional-tests/: CMakeLists.txt  io.cc  log.cc
include/: CMakeLists.txt
include/nova/: allocator.h  cast.h  color.h  color.hh  data.h  data.hh  error.h  error.hh  expected.h  expected.hh  flat_map.h  flat_map.hh  intrinsics.h  intrinsics.hh  io.h  io.hh  json.h  json.hh  log.hh  main.h  main.hh  memory.h  not_null.hh  nova.h  nova.hh  parse.h  parse.hh  random.h  random.hh  static_string.h  static_string.hh  std_extensions.h  std_extensions.hh  system.h  system.hh  tcp.hh  tcp_handler.hh  threading.h  threading.hh  type_traits.h  (+12 more)
libnova/: CMakeLists.txt  CMakeUserPresets.json  Config.cmake.in  color.hpp  conandata.yml  conanfile.py  dependencies.cmake  install.cmake  main.hpp  random.hpp  test.cmake  vec.hpp
libnova-gfx/: CMakeLists.txt  camera.hpp  pathtracer.cpp  pathtracer.hpp  primitives.hpp
libnova/cmake/: novaCompilerWarnings.cmake  settings.cmake
libnova/libnova/: CMakeLists.txt  cast.hpp  color.hpp  data.hpp  data.test.cpp  error.hpp  error.test.cpp  expected.hpp  expected.test.cpp  flat_map.hpp  intrinsics.hpp  io.hpp  io.test.cpp  json.hpp  log.hpp  main.hpp  not_null.hpp  not_null.test.cpp  nova.cpp  nova.hpp  parse.hpp  parse.test.cpp  random.hpp  random.test.cpp  serializer.bench.cpp  static_string.hpp  std_extensions.test.cpp  system.hpp  test.cmake  test_utils.hpp  threading.hpp  type_traits.hpp  type_traits.test.cpp  units.test.cpp  utils.hpp  utils.test.cpp  vec.hpp  vec.test.cpp  yaml.hpp  yaml.test.cpp
libnova/libnova/details/: version.hpp
nova/: CMakeLists.txt  pathtracer.cpp
package-test/: CMakeLists.txt  conanfile.py  main.cc
scripts/: clang-tidy.sh  live-tail.lib.sh  log.lib.sh  test.sh  version-bump.sh
src/: CMakeLists.txt  detector.h  nova.h  stringUtils.h  string_utils.h  tcp.cc
tests/: CMakeLists.txt  conanfile.txt  testcases_basics.cpp  testcases_timer.cpp  types.h
tests/expected_output/: basic_tests.txt  timer_tests.txt
tests/io/: CMakeLists.txt  io.cc
tests/log/: .gitignore  CMakeLists.txt  log.cc
tests/package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py  main.cpp
tools/: test.sh
unit-tests/: .clang-tidy  CMakeLists.txt  allocator.cc  cast.cc  color.cc  data.cc  error.cc  expected.cc  flat_map.cc  io.cc  json.cc  memory.cc  not_null.cc  parse.cc  random.cc  static_string.cc  std_extensions.cc  test_utils.hh  type_traits.cc  units.cc  utils.cc  vec.cc  xml.cc  yaml.cc
